// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render with skin link 1`] = `
<button
  class="link"
/>
`;

exports[`Button should render with skin primary 1`] = `
<button
  class="button primary"
/>
`;

exports[`Button should render with skin secondary 1`] = `
<button
  class="button secondary"
/>
`;
